[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-tier-backup"
version = "0.2.0"
description = "Encrypted, tiered (daily/weekly/monthly/yearly) automated backup for important office files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyzipper>=0.3.6",
    "requests>=2.31",
    "msal>=1.28",
]

[project.optional-dependencies]
outlook = ["pywin32>=306"]
dev = ["pytest>=8.0"]

[project.scripts]
vault-tier-backup = "vault_tier_backup.run:main"

[tool.setuptools.packages.find]
where = ["src"]
